--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -30,8 +30,8 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12
-    - name: Install Surge
-      run: npm install -g Surge
+    - name: Install surge
+      run: npm install --global surge
     - name: Run Surge
       run: surge ./bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
         
