--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -1,13 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Deploy Website
+name: React Expense_tracking App Deploy to surge 
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
   push:
     branches: [ master ]
-  
+  pull_request:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,22 +21,30 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    
+    - name: Install NodeJS
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: 12
+   
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+          cmd: install # will run `yarn install` command
+   
+    - name: Build React App 
+      run: yarn build
+   
+    - name: Install Surge
+      run: npm install --global surge
+    - name: Deploy Surge
+      run: surge ./build qurat_Expense_tracking_app.surge.sh --token ${{secrets.SURGE_TOKEN}}
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
       run: echo Hello, world!
 
     # Runs a set of commands using the runners shell
-    - name: Install NodeJS
-      uses: actions/setup-node@v2-beta
-      with:
-        node-version: 12
-    - name: Install surge
-      run: npm install --global surge
-    - name: Run Surge
-      run: surge ./ bootcampnewapp.surge.sh --token ${{secrets.SURGE_TOKEN}}
-        
-      
-          
-      
-     
+    - name: Run a multi-line script
+      run: |
+        echo Add other actions to build,
+        echo test, and deploy your project.
