--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -31,7 +31,7 @@ jobs:
       with:
            cmd: install # will run `yarn install` command
    
-    - name: Build React App 
+    - name: React App tracking 
       run: yarn build
    
     - name: Install Surge
